# ORDERFLOW_PRO

./: .pre-commit-config.yaml  Dockerfile  Justfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml  ci.yaml  deploy.yaml  main.yaml
src/orderflow_pro/: __init__.py  main.py
src/orderflow_pro/alerts/: system.py  telegram.py
src/orderflow_pro/analyzers/: bid_ask_walls.py  imbalances.py  volume_spikes.py  whale_orders.py
src/orderflow_pro/config/: settings.py
src/orderflow_pro/exchanges/: manager.py
src/orderflow_pro/models/: alerts.py  order_book.py  patterns.py
src/orderflow_pro/utils/: logger.py
